CreateJointAccountHolders Integration tests